# TM_oop_lab11

./: README.md  create_db.py  export_data.py  game_sales.db  pyproject.toml  vgsales.db
datasets/: city.csv  city.txt  vgsales.csv
results/: genres_stats.csv  nintendo_games.json  sales_by_year.csv  top_games.csv  top_games.json
results/csv/: query_01.csv  query_02.csv  query_03.csv  query_04.csv  query_05.csv
results/json/: query_01.json  query_02.json  query_03.json  query_04.json  query_05.json
sql_scripts/: analysis.sql  basic_queries.sql  export.sql  setup.sql
