[project]
name = "tm-oop-lab11"
version = "1.0.0"
description = "Лабораторная работа по ООП"
requires-python = ">=3.9"

[project.optional-dependencies]
dependencies = [
    "pandas>=2.0.0",
]
[dependency-groups]
dev = [
    "black>=25.12.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
]
